# context-manager-skill

./: .gitignore  .pre-commit-config.yaml  AUTHORS.md  AUTO_DISPLAY.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  MIGRATION.md  Makefile  README.md  SKILL.md  auto-display-example.sh  ctx  pyproject.toml  setup.sh  shell-integration.sh  show-context.sh
.claude/: context.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
scripts/: context_manager.py  types.py
tests/: __init__.py  conftest.py  test_context_manager.py
